<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="113dp"
        android:layout_height="40dp"
        android:text="@string/no_need_to_install_application"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="144dp"
        android:layout_height="36dp"
        android:text="@string/apps"
        android:textColor="@color/design_default_color_error"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designed_by_prince"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchfb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159"
        app:srcCompat="@drawable/icons8_facebook_48"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,UsingOnClickInXml"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchwhatsapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159"
        app:srcCompat="@drawable/icons8_whatsapp_48"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchspot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159"
        app:srcCompat="@drawable/icons8_spotify_50"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchtele"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        app:srcCompat="@drawable/icons8_telegram_app_48"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchzomat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        app:srcCompat="@drawable/icons8_zomato_logo_50"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchinsta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        app:srcCompat="@drawable/icons8_instagram_50"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchamaz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47"
        app:srcCompat="@drawable/icons8_amazon_50"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchneflix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47"
        app:srcCompat="@drawable/icons8_netflix_desktop_app_48"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchprime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        app:srcCompat="@drawable/icons8_amazon_prime_video_50"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchdiscord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627"
        app:srcCompat="@drawable/icons8_discord_new_48"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchuber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637"
        app:srcCompat="@drawable/icons8_uber_app_48"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637"
        app:srcCompat="@drawable/icons8_gmail_logo_48"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchchrome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799"
        app:srcCompat="@drawable/icons8_chrome_48"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton16"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchteams"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809"
        app:srcCompat="@drawable/icons8_microsoft_teams_2019_48"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton17"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:onClick="launchgit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809"
        app:srcCompat="@drawable/icons8_github_64"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/contact"
        android:layout_width="57dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/icons8_new_contact_50"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/next"
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/contactus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>